# BBT_AutoCounter_OpenCV

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json
doc/: project_plan_6_week.md
feasibility/: README.md
feasibility/exploratory/: 00_define_BBT_environment_image.py  01_define_BBT_environment_video.py  02_detect_motion.py  03_clean_motion_mask.py  04_detect_crossing_event.py  05_hand_motion_confirmation.py  06_scoring_w_hand_confirm.py  all_exploratory_steps.py
feasibility/models/: README.md
feasibility/src/: crossing_event_detector.py  define_BBT_environment.py  detect_hand_motion_blob.py  hand_motion_confirmation.py  motion_mask_cleaning.py  object_transfer_confirmation.py
feasibility/utility/: export_first_frame.py
scripts/: confirm_hand_motion.py  define_bbt_environment.py  detect_crossing_events.py  detect_motion_blobs.py  inspect_motion_mask.py  score_bbt_video.py
src/bbt_autocounter/: __init__.py  crossing.py  environment.py  hand_confirmation.py  motion.py  object_confirmation.py  pipeline.py  ui.py
