[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "bbt-autocounter-opencv"
version = "0.1.0"
description = "OpenCV-based Box and Block Test automated scoring prototype."
requires-python = ">=3.10"
dependencies = [
    "mediapipe",
    "numpy",
    "opencv-python",
]

[tool.setuptools.packages.find]
where = ["src"]
